dataset1235/2025-2/2318198438/users/1018361269/executions/2601575092_3221148872.log
== RUN (2025-08-13 13:59:35)
-- CODE: 

num1= 40
num2= 35
print('num1+num2')
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
num1+num2
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
num1+num2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 13:58:55)
-- CODE: 
print("a soma é", soma)
num1= 40
num2= 35
soma = num1+num2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("a soma é", soma)
                      ^^^^
NameError: name 'soma' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("a soma é", soma)
                      ^^^^
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 13:58:36)
-- CODE: 
print("a soma é", soma)
num1= 40
num2= 35
soma = num1+num2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("a soma é", soma)
                      ^^^^
NameError: name 'soma' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("a soma é", soma)
                      ^^^^
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:02:13)
-- CODE: 

num1= 40
num2= 35
soma = num1+num2
print('a soma é',soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
a soma é 75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
a soma é 75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:00:50)
-- CODE: 

num1= 40
num2= 35
soma = 40+35
print('a soma é'soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 5
    print('a soma é'soma)
          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
File "XXXX", line 5
    print('a soma é'soma)
          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 14:02:20)
-- CODE: 

num1= 40
num2= 35
soma = num1+num2
print('a soma é',soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
a soma é 75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
a soma é 75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:02:16)
-- CODE: 

num1= 40
num2= 35
soma = num1+num2
print('a soma é',soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
a soma é 75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
a soma é 75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:01:02)
-- CODE: 

num1= 40
num2= 35
soma = 40+35
print('a soma é',soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
a soma é 75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
a soma é 75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 13:56:56)
-- CODE: 
print('soma')
num1= 40
num2= 35
soma = num1+num2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
soma
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
soma
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:02:11)
-- CODE: 

num1= 40
num2= 35
soma = num1+num2
print('a soma é',soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
a soma é 75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
a soma é 75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:02:15)
-- CODE: 

num1= 40
num2= 35
soma = num1+num2
print('a soma é',soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
a soma é 75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
a soma é 75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 13:57:39)
-- CODE: 
print('a soma é',soma)
num1= 40
num2= 35
soma = num1+num2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print('a soma é',soma)
                     ^^^^
NameError: name 'soma' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print('a soma é',soma)
                     ^^^^
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
